Add GCC 3.0.4 and 3.2.1.

--- a/htdocs/develop.html
+++ b/htdocs/develop.html
@@ -237,9 +237,9 @@ stages of development, branch points, and releases:</p>
        |                                             \
        v                                              v
   GCC 3.1 Stage 2 (ended Dec 19 2001)         GCC 3.0.3 release (Dec 20 2001)
-       |                                               :
-       v                                               :
-  GCC 3.1 Stage 3 (ends Feb 15 2002)
+       |                                               \ 
+       v                                                v 
+  GCC 3.1 Stage 3 (ends Feb 15 2002)          GCC 3.0.3 release (Feb 20 2001)
        |
        +-- GCC 3.1 branch created ---------+
        |                                    \
@@ -258,7 +258,9 @@ stages of development, branch points, and releases:</p>
        |                                    \
        :                                     v
        :                                      GCC 3.2 release (Dec 15 2002)
-       :                                          :
+       :                                       \
+                                                v 
+                                              GCC 3.2.1 release (Feb 15 2003)
 
 </pre>
 
