Add more 3.1 entries:   i386-pc-solaris2.8   i686-pc-linux-gnu (i386, i586, i686)      (PLD/Linux Nest, glibc 2.2.5, kernel 2.4.18)   i686-pc-linux-gnu (Debian Unstable, glibc 2.2.4, kernel 2.4.17)   ia64-unknown-linux-gnu   powerpc-unknown-linux-gnu (PLD/Linux Nest, glibc 2.2.5, kernel 2.4.18)
plus more test results.  Alphabetize lists of enabled languages for
easier comparison.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<!DOCTYPE html 
-          PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-          "DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html>
 
 <head>
 <title>Build status for GCC 3.1</title>
@@ -49,15 +45,30 @@ Installing GCC: Final Installation</a>.</p>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01326.html">3.1</a>
 <br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00593.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00586.html">3.1</a>
 </td>
 </tr>
 
 <tr>
+<td>i386-pc-solaris2.8</td>
+<td>SunOS ws01 5.8</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01399.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu (i386, i586, i686)</td>
+<td>PLD/Linux Nest, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01323.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-cygwin</td>
 <td>Cygwin 1.3.9, Windows XP</td>
-<td>Partially successful (C, C++):
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01274.html">3.1</a></td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01345.html">3.1</a></td>
 </tr>
 
 <tr>
@@ -84,8 +95,16 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00549.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00575.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00579.html">3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00580.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00580.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00592.html">3.1</a>
 </td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Debian Unstable, glibc 2.2.4, kernel 2.4.17</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01342.html">3.1</a></td>
 </tr>
 
 <tr>
@@ -93,13 +112,15 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01328.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00591.html">3.1</a>
 </td>
 </tr>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.7</td>
-<td>Successful (C, C++, Java, F77):
+<td>Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01286.html">3.1</a></td>
 </tr>
 
@@ -125,7 +146,7 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
-<td>i686-pc-linux-gnu</td>
+<td>i686-pc-linux-gnu (i486)</td>
 <td>SuSE Linux 8.0, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful (C, C++, F77, Obj-C, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
@@ -136,7 +157,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-mingw32</td>
-<td>Mingw 2.0/MSYS 1.0.7</td>
+<td>MinGW 2.0/MSYS 1.0.7</td>
 <td>Successful (C, C++, F77, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01330.html">3.1</a></td>
 </tr>
@@ -150,6 +171,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>ia64-unknown-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01403.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00598.html">3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>mipsel-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -158,9 +189,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>PLD/Linux Nest, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01323.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
-<td>Successful (C, C++, F77, Obj-C, Java):
+<td>Successful (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00578.html">3.1</a>
@@ -178,7 +216,7 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>sparc-unknown-linux-gnu</td>
 <td>SuSE Linux 7.3, glibc 2.2.4, kernel 2.4.14</td>
-<td>Successful (C, C++, F77, Obj-C, Java):
+<td>Successful (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00560.html">3.1</a>
@@ -188,7 +226,7 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>sparc64-sun-solaris2.8</td>
 <td>&nbsp;</td>
-<td>Successful (C, C++, F77, Obj-C, Java):
+<td>Successful (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00572.html">3.1</a>
