--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -58,6 +58,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-openbsd3.1</td>
+<td>GNU as 1.92.3, openbsd ld</td>
+<td>Unsuccessful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01335.html">3.1</a>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu (i386, i586, i686)</td>
 <td>PLD/Linux Nest, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
