Fix spello: instrics->intrinsics

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -62,7 +62,7 @@
 
 <li>Support for data prefetching instructions has been added to the GCC
     back end and several targets.  A new <code>__builtin_prefetch</code>
-    instrics is available to explicitly insert prefetch instructions and
+    intrinsics is available to explicitly insert prefetch instructions and
     experimental support for loop array prefetching has been added (see
     <code>-fprefetch-loop-array</code> documentation).
 </li>
