Further "intrinsic" spelling and grammar fixes.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -62,7 +62,7 @@
 
 <li>Support for data prefetching instructions has been added to the GCC
     back end and several targets.  A new <code>__builtin_prefetch</code>
-    intrinsics is available to explicitly insert prefetch instructions and
+    intrinsic is available to explicitly insert prefetch instructions and
     experimental support for loop array prefetching has been added (see
     <code>-fprefetch-loop-array</code> documentation).
 </li>
@@ -251,8 +251,8 @@ progress.
       <li>The compiler now supports MMX, 3DNow!, SSE, and SSE2 instructions.
       Options <code>-mmmx</code>, <code>-m3dnow</code>, <code>-msse</code>,
       and <code>-msse2</code> will enable the respective instruction sets.
-      Intel C++ compatible MMX/3DNow!/SSE intrics are implemented.  SSE2
-      intrics will be added in next major release.</li>
+      Intel C++ compatible MMX/3DNow!/SSE intrinsics are implemented.  SSE2
+      intrinsics will be added in next major release.</li>
 
       <li>Following those improvements, targets for Pentium MMX, K6-2, K6-3,
       Pentium III, Pentium 4, and Athlon 4 Mobile/XP/MP were added.
