Add more 3.1 entries:   i586-pc-linux-gnu (Debian GNU 3.0, glibc 2.2.5, kernel 2.2.19)   i686-pc-linux-gnu (Mandrake 8.0, glibc 2.2.4, kernel 2.4.3)   mips-sgi-irix6.5 plus more test results.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -36,7 +36,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>armv5l-unknown-linux-gnu (xscale)</td>
 <td>glibc 2.2.5, kernel 2.4.16</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01269.html">3.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01269.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00609.html">3.1</a>
+</td>
 </tr>
 
 <tr>
@@ -62,6 +65,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>GNU as 1.92.3, openbsd ld</td>
 <td>Unsuccessful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01335.html">3.1</a>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Debian GNU 3.0, glibc 2.2.5, kernel 2.2.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01420.html">3.1</a></td>
 </tr>
 
 <tr>
@@ -116,6 +126,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.0, glibc 2.2.4, kernel 2.4.3</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01453.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01328.html">3.1</a>
@@ -133,7 +150,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Red Hat 7.2</td>
+<td>Red Hat 7.2, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01306.html">3.1</a></td>
 </tr>
@@ -188,6 +205,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>mips-sgi-irix6.5</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01470.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>mipsel-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -203,12 +227,21 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.5.1</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00617.html">3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00578.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00578.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00621.html">3.1</a>
 </td>
 </tr>
 
