Add entry for 3.1:   i686-pc-linux-gnu (Debian Unstable 3.0, glibc 2.2.5, kernel 2.4.19)

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -126,6 +126,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Debian Unstable 3.0, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01488.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Mandrake 8.0, glibc 2.2.4, kernel 2.4.3</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01453.html">3.1</a></td>
