Fix html markup.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -64,7 +64,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>i386-unknown-openbsd3.1</td>
 <td>GNU as 1.92.3, openbsd ld</td>
 <td>Unsuccessful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01335.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01335.html">3.1</a></td>
 </tr>
 
 <tr>
