--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -228,6 +228,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
+<td>Debian GNU 3.0, glibc 2.2.5, kernel 2.4.16</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01545.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
 <td>PLD/Linux Nest, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01323.html">3.1</a></td>
