Add links to lots of test results.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -23,6 +23,22 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>alpha-dec-osf4.0f</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00631.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>alpha-dec-osf5.1</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00635.html">3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>alphaev6-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77):
@@ -50,6 +66,14 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00593.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00586.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-solaris2.8</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00634.html">3.1</a>
 </td>
 </tr>
 
@@ -212,6 +236,22 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>mips-sgi-irix6.2</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00632.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00639.html">3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>mips-sgi-irix6.5</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java):
@@ -228,9 +268,20 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00630.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
 <td>Debian GNU 3.0, glibc 2.2.5, kernel 2.4.16</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01545.html">3.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01545.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00638.html">3.1</a>
+</td>
 </tr>
 
 <tr>
@@ -244,7 +295,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.5.1</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00617.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00617.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00636.html">3.1</a>
 </td>
 </tr>
 
@@ -255,7 +307,8 @@ Installing GCC: Final Installation</a>.</p>
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01227.html">3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00578.html">3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00621.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00621.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00633.html">3.1</a>
 </td>
 </tr>
 
