--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -92,6 +92,21 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-msdosdjgpp</td>
+<td>DOS under Windows 98SE</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02001.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00563.html">3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>i586-pc-linux-gnu</td>
 <td>Debian GNU 3.0, glibc 2.2.5, kernel 2.2.19</td>
 <td>Successful:
@@ -103,6 +118,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>PLD/Linux Nest, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01323.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 98-4.10, Windows 98SE</td>
+<td>Successful (C, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01989.html">3.1</a></td>
 </tr>
 
 <tr>
@@ -121,11 +143,17 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
-<td>i586-pc-linux-gnu</td>
-<td>&nbsp;</td>
-<td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00563.html">3.1</a>
-</td>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.10, Windows NT 4.0</td>
+<td>Partially successful (Ada, C, C++, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01761.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.10, Windows XP Pro</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02009.html">3.1</a></td>
 </tr>
 
 <tr>
@@ -146,6 +174,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Debian Unstable, glibc 2.2.4, kernel 2.4.17</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01342.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Debian GNU 3.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01880.html">3.1</a></td>
 </tr>
 
 <tr>
@@ -190,7 +225,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01256.html">3.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01256.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01585.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01721.html">3.1</a></td>
 </tr>
 
 <tr>
