Fixed a spelling error: use 'run-time library' rather than 'runtime library'

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -169,7 +169,7 @@
 <li>Forward @protocol declarations have been fixed.</li>
 <li>Loading of categories has been fixed in certain situations (GNU
     run time only).</li>
-<li>The class lookup in the runtime library has been rewritten so that
+<li>The class lookup in the run-time library has been rewritten so that
     class method dispatch is more than twice as fast as it used to be (GNU
     run time only).</li>
 </ul>
