Mention FLIM front end. By sreejith menon <flimfrontend@yahoo.com>.

--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -62,6 +62,10 @@ language</a> provides a thin interface to GCC trees with lispy syntax.
 It is meant as an intermediate language, used for example by the
 <a href="http://gont.pld.org.pl/">Gont</a> compiler.</li>
 
+<li> <a href="http://www.geocities.com/flimfrontend/">FLIM</a>, a Flexible
+Language for Integer Manipulation, can be used as a guideline in developing
+a new frontend for GCC.</li> 
+
 </ul>
 
 </body>
