--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -10,8 +10,7 @@
 <p>Currently the main GCC distribution contains front ends for C
 (gcc), C++ (g++), Objective C,
 Fortran (g77), Java (<a
-href="java/">GCJ</a>), and Ada (GNAT).  GCC 3.1 will be the first official
-version of GCC to include the Ada front end.</p>
+href="java/">GCJ</a>), and Ada (GNAT).</p>
 
 <p>There are several more front ends for different languages that have
 been written for GCC but not yet integrated into the main distribution
