Mention the cp-parser-branch. By John Levon <levon@movementarian.org>.

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -156,6 +156,8 @@ you may want to check out include:</p>
   actual precompiled header work; a public announcement will be made
   on the <a href="lists.html">GCC mailing list</a> when it is ready
   for testing.</li>
+  <li>cp-parser-branch.  This branch contains a new hand-written recursive
+  descent parser for C++.</li>
 </ul>
 
 
