--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -304,6 +304,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.3.2.0</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02265.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>powerpc-unknown-linux-gnu</td>
 <td>Debian GNU 3.0, glibc 2.2.5, kernel 2.4.16</td>
 <td>Successful:
@@ -322,11 +329,19 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
-<td>SuSE 7.0, kernel 2.2.16</td>
+<td>SuSE 7.0, glibc 2.1.3, kernel 2.2.16</td>
 <td>Successful (C, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02113.html">3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00630.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-netbsd1.5ZC</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00770.html">3.1</a>
 </td>
 </tr>
 
@@ -336,6 +351,22 @@ Installing GCC: Final Installation</a>.</p>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00617.html">3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00636.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00752.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00749.html">3.1</a>
 </td>
 </tr>
 
