Add entry for 3.1:   i686-pc-linux-gnu (Red Hat 6.2, glibc 2.1.3, kernel 2.2.18)

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -199,9 +199,10 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
-<td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.19</td>
+<td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.19, 2.2.18</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01328.html">3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01328.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02344.html">3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00591.html">3.1</a>
 </td>
