--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -24,7 +24,7 @@
  </ul>
 </li>
 <li><a href="#manage">Managing Bugs (GNATS and the test-suite)</a></li>
-<li><a href="#known">Frequently Reported Bugs in GCC 3.0</a>
+<li><a href="#known">Frequently Reported Bugs in GCC</a>
  <ul>
  <li><a href="#general">General</a></li>
  <li><a href="#fortran">Fortran</a></li>
@@ -310,8 +310,7 @@ Trouble with GNU Fortran</a> in the G77 manual.</p>
 often enough to warrant a mention here.</p>
 
 <dl>
-<dt><em>Cannot initialize a static variable with
-<code>stdin</code>.</em></dt>
+<dt>Cannot initialize a static variable with <code>stdin</code>.</dt>
 <dd><p>This has nothing to do with GCC, but people ask us about it a
 lot.  Code like this:</p>
 
@@ -340,7 +339,7 @@ projects; please check the
 for details.
 </p></dd>
 
-<dt><em>Cannot use preprocessor directive in macro arguments.</em></dt>
+<dt>Cannot use preprocessor directive in macro arguments.</dt>
 <dd><p>Let me guess... you wrote code that looks something like this:</p>
 <blockquote><pre>
   memcpy(dest, src,
@@ -502,7 +501,7 @@ changing the ABI.</p>
 
 <dl>
 
-<dt><em>Complicated virtual inheritance segfaults</em></dt>
+<dt>Complicated virtual inheritance segfaults</dt>
 
 <dd>Some instances of complicated virtual inheritance crash when
 executing the constructor. We believe some cases to be already existing
@@ -512,9 +511,9 @@ data members (so called nearly empty bases). You might be able to work
 around the problem by adding a dummy data member. GNATS PRs 3598, 3290,
 3145 &amp; 2811 track these issues.</dd>
 
-<dt><em>Base classes with <code>operator delete [] (void *, size_t)</code>
+<dt>Base classes with <code>operator delete [] (void *, size_t)</code>
 sometimes did not get the correct size passed when deleting a derived
-object</em></dt>
+object</dt>
 
 <dd>This is a long standing G++ bug, that should have been fixed by the
 new ABI. Unfortunately it did not, and requires an ABI change to fix.
@@ -525,7 +524,7 @@ which is now fixed in the 3.1 tree with
 <a href="http://gcc.gnu.org/ml/gcc-patches/2001-07/msg01302.html">
 this patch</a>.</dd>
 
-<dt><em>Covariant return types</em></dt>
+<dt>Covariant return types</dt>
 
 <dd>We do not implement non-trivial covariant returns. We also generate
 incorrect virtual function tables for trivial covariance. Although
@@ -541,20 +540,19 @@ not.</p>
 
 <dl>
 
-<dt><em>Nested classes can access private types of the containing
-class.</em></dt>
+<dt>Nested classes can access private types of the containing
+class.</dt>
 <dd><p>G++ now implements type access control on member types. Defect
 report 45 clarifies that nested classes are members of the class they
 are nested in, and so are granted access to private members of that
 class.</p></dd>
 
-<dt><em>Classes in exception specifiers must be complete
-types.</em></dt>
+<dt>Classes in exception specifiers must be complete types.</dt>
 <dd><p>[15.4]/1 tells you that you cannot have an incomplete type, or
 pointer to incomplete (other than <code><i>cv</i> void *</code>) in
 an exception specification.</p></dd>
 
-<dt><em>G++ emits two copies of constructors and destructors.</em></dt>
+<dt>G++ emits two copies of constructors and destructors.</dt>
 
 <dd><p>In general there are <em>three</em> types of constructors (and
 destructors).</p>
@@ -566,7 +564,7 @@ destructors).</p>
 <p>The first two are different, when virtual base classes are involved.
 In some cases we can do better, and this is logged in GNATS.</p></dd>
 
-<dt><em>Exceptions don't work in multithreaded applications.</em></dt>
+<dt>Exceptions don't work in multithreaded applications.</dt>
 
 <dd><p>You need to rebuild g++ and libstdc++ with
 <code>--enable-threads</code>.  Remember, c++ exceptions are not like
@@ -574,7 +572,7 @@ hardware interrupts. You cannot throw an exception in one thread and
 catch it in another. You cannot throw an exception from a signal
 handler, and catch it in the main thread.</p></dd>
 
-<dt><em>Global destructors are not run in the correct order.</em></dt>
+<dt>Global destructors are not run in the correct order.</dt>
 
 <dd><p>Global destructors should be run in the reverse order of their
 constructors <em>completing</em>. In most cases this is the same as
@@ -585,7 +583,7 @@ switch on by default, as it requires a <code>cxa</code> aware runtime
 library (<code>libc</code>, <code>glibc</code>, or
 equivalent).</p></dd>
 
-<dt><em>Problems with floating point computations.</em></dt>
+<dt>Problems with floating point computations.</dt>
 <dd><p>In a number of cases, GCC appears to perform floating point
 computations incorrectly. For example, the program</p>
 <blockquote><code>
@@ -614,7 +612,7 @@ the float and double types. Please study
 <a href="http://www.validlab.com/goldberg/paper.ps">this paper</a>
 for more information.</p></dd>
 
-<dt><em>Templates, scoping, and digraphs.</em></dt>
+<dt>Templates, scoping, and digraphs.</dt>
 
 <dd><p>If you have a class in global namespace, say named
 <code>X</code>, and want to give it as a template argument to some
@@ -645,7 +643,7 @@ and the scope operator.
 
 <dl>
 
-<dt><em>The <code>export</code> keyword is not implemented.</em></dt>
+<dt>The <code>export</code> keyword is not implemented.</dt>
 <dd><p>Most C++ compilers (G++ included) do not yet implement
 <code>export</code>, which is necessary for separate compilation of
 template declarations and definitions. Without <code>export</code>, a
@@ -654,7 +652,7 @@ workaround is simply to place all definitions in the header
 itself. Alternatively, the compilation unit containing template
 definitions may be included from the header.</p></dd>
 
-<dt><em>Two stage lookup in templates is not implemented.</em></dt>
+<dt>Two stage lookup in templates is not implemented.</dt>
 <dd><p>[14.6] specifies how names are looked up inside a template. G++
 does not do this correctly, but for most templates this will not be
 noticeable.</p></dd>
