Add 3.1 entry for alpha-dec-osf4.0d.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -23,6 +23,13 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>alpha-dec-osf4.0d</td>
+<td>&nbsp;</td>
+<td>Partially successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02489.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>alpha-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Test results:
