Add search-algorithm choice, called type, now "exact" by default.  Avoid using old symlink to db.

--- a/htdocs/search.html
+++ b/htdocs/search.html
@@ -14,6 +14,10 @@ Match: <select name="method">
 <option selected="selected" value="and">All words</option>
 <option value="or">Any word</option>
 </select>
+Type: <select name="search_algorithm">
+<option value="exact:1" selected="selected">Exact</option>
+<option value="exact:1 prefix:0.6 synonyms:0.5 endings:0.1">Fuzzy</option>
+</select>
 Format: <select name="format">
 <option value="builtin-long">Long</option>
 <option value="builtin-short">Short</option>
@@ -710,7 +714,7 @@ Note that the operator <b>not</b> is binary, having the meaning of
 
 <!-- MetaHTML -->
 <alist-to-package
- <get-file-properties /sourceware/htdig2/gcc/db/db.docdb>
+ <get-file-properties /sourceware/htdig/gcc/db/db.docdb>
  x
 >
 <add 1900 <get-var x::READ[2]>>-<get-var x::READ[0]>-<get-var x::READ[1]>
