--- a/htdocs/releasing.html
+++ b/htdocs/releasing.html
@@ -62,8 +62,9 @@ mailing lists.
 FSF.</li>
 </ul></li>
 
-<li>Increment the version numbers in the <code>[vV]version.c</code>
-files and make them include the date and <code>(prerelease)</code>
+<li>Increment the version numbers in the <code>[vV]ersion.c</code>
+files and <code>gcc/ada/gnatvsn.ads</code>
+and make them include the date and <code>(prerelease)</code>
 instead of saying <code>(release)</code> and the old release version,
 before allowing any new checkins to the branch.</li>
 </ol>
