* gcc-3.2/changes.html, projects/cpplib.html, c99status.html: 	Update for CPP changes.

--- a/htdocs/c99status.html
+++ b/htdocs/c99status.html
@@ -149,7 +149,7 @@ the much more limited support in GCC 2.95.</p>
 </tr>
 
 <tr><td><em>preprocessor arithmetic<br />done in <code>intmax_t</code>/<code>uintmax_t</code></em></td>
-    <td></td><td></td><td>Broken</td><td></td>
+    <td></td><td>Done</td><td></td><td></td>
 </tr>
 
 <tr><td><em>mixed declarations and code</em></td>
@@ -297,10 +297,7 @@ the much more limited support in GCC 2.95.</p>
 
 <ul>
 
-<li>cpp has no support for multibyte character sets.</li>
-
-<li>cpp arithmetic is done in <code>HOST_WIDEST_INT</code>, which may not
-be the same as the target <code>intmax_t</code> required by C99.</li>
+<li>cpp has limited support for multibyte character sets.</li>
 
 <li>IEC 60559 is IEEE 751 floating point.  This works if and only if
 the hardware is perfectly compliant, but GCC does not define
