--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -38,6 +38,10 @@
 
     <li>The separate ISO preprocessor has been completely removed.
     The front-end handles preprocessed output if necessary.</li>
+
+    <li>In C99 mode preprocessor arithmetic is done in the precision
+	of the target's <code>intmax_t</code>, as required by that
+	standard.</li>
   </ul>
 
 <h3>C++</h3>
