Update links to Toy Example Language.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -27,9 +27,8 @@
   by Joachim Nadler and Tim Josling
   &lt;<a href="mailto:tej@melbpc.org.au">tej@melbpc.org.au</a>&gt;.</li>
 
-  <li><a href="http://members.wri.com/johnnyb/compilers/">A Toy
-  Example Language</a> by Jonathan Bartlett &lt;<a
-  href="mailto:johnnyb@wolfram.com">johnnyb@wolfram.com</a>&gt;.</li>
+  <li><a href="http://www.eskimo.com/~johnnyb/computers/toy/">A Toy
+  Example Language</a> by Jonathan Bartlett &lt;johnnyb@eskimo.com&gt;.</li>
 
   <li><a href="http://wwwspies.informatik.tu-muenchen.de/personen/pizka/">GNU INSEL Compiler gic</a>.</li>
 
