--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -165,6 +165,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-cygwin</td>
+<td>Cygwin 1.3.10, Windows NT 5.0</td>
+<td>Successful (including Ada):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02644.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-cygwin</td>
 <td>Cygwin 1.3.10, Windows XP Pro</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02009.html">3.1</a></td>
@@ -213,6 +220,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.2, glibc 2.2.4, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02554.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 6.2, glibc 2.1.3, kernel 2.2.19, 2.2.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01328.html">3.1</a>,
@@ -234,6 +248,17 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 7.2, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful (C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01306.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02506.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02596.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02506.html">3.1</a>
+</td>
 </tr>
 
 <tr>
@@ -315,6 +340,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01470.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>&nbsp;</td>
+<td>Successful (C, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02667.html">3.1</a></td>
 </tr>
 
 <tr>
