News: Mention removal of targets deprecated in gcc 3.1. 3.2 changes: Ditto. Begin list of deprecations for this release. Formatting tweaks, DFA-scheduler updates. 3.1 changes: Add an anchor.  Say "obsolete systems" not "...targets".

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -302,11 +302,11 @@ written to conform to Motorola's AltiVec specs.  See <code>-maltivec</code>.</li
 </ul>
 
 
-<h2>Obsolete Targets</h2>
+<h2><a name="obsolete_systems">Obsolete Systems</a></h2>
 
 <p>Support for a number of older systems has been declared obsolete in
-GCC 3.1.  Unless there is activity to revive them, the next
-release of GCC will have their sources permanently REMOVED.</p>
+GCC 3.1.  Unless there is activity to revive them, the next release of
+GCC will have their sources permanently <strong>removed</strong>.</p>
 
 <p>All configurations of the following processor architectures have
 been declared obsolete:</p>
