--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -13,18 +13,25 @@
 
 <h2>Caveats</h2>
 
-<ul>
-  <li>The preprocessor no longer accepts multi-line string literals.
-      They were deprecated in 3.0 and 3.1.</li>
-</ul>
+  <ul>
+    <li>The preprocessor no longer accepts multi-line string literals.
+        They were deprecated in 3.0 and 3.1.</li>
+
+    <li>Support for all the systems <a
+        href="../gcc-3.1/changes.html#obsolete_systems">obsoleted in
+        GCC 3.1</a> has been removed from GCC 3.2.  See <a
+        href="#obsolete_systems">below</a> for a list of systems which
+        are obsoleted in this release.</li>
+  </ul>
 
 
 <h2>General Optimizer Improvements</h2>
 
   <ul>
-    <li>...</li>
+    <li>A new scheme for accurately describing processor pipelines,
+        the <a href="../news/dfa.html">DFA scheduler</a>, has been
+        added.</li>
   </ul>
-
 
   
 <h2>New Languages and Language specific improvements</h2>
@@ -48,7 +55,7 @@
 
   <ul>
     <li>Type based alias analysis has been implemented for C++
-    aggregate types. </li>
+        aggregate types. </li>
   </ul>
 
 <h3>Java</h3>
@@ -62,12 +69,32 @@
     <li>The HP-PA port now defaults to scheduling for the PA8000 series
         of processors.  Scheduling support for the PA7300 processor has
 	been added.</li>
-    <li>The SPARC, HP-PA and SH4 ports have been converted to use the DFA
-        processor pipeline description.</li>
+    <li>The SPARC, HP-PA, SH4, and x86 ports have been converted to
+        use the DFA processor pipeline description.</li>
   </ul>
 
 
-<h2>Obsolete Targets</h2>
+<h2><a name="obsolete_systems">Obsolete Systems</a></h2>
+
+  <p>Support for a number of older systems has been declared obsolete in
+  GCC 3.2.  Unless there is activity to revive them, the next release of
+  GCC will have their sources permanently <strong>removed</strong>.</p>
+
+  <p>All configurations of the following processor architectures have
+  been declared obsolete:</p>
+
+  <ul>
+    <li>Matsushita MN10200, <code>mn10200-*-*</code></li>
+    <li>Motorola 88000, <code>m88k-*-*</code></li>
+    <li>National Semiconductor 32000, <code>ns32k-*-*</code></li>
+    <li>IBM ROMP, <code>romp-*-*</code>
+  </ul>
+
+  <p>Also, some individual systems have been obsoleted:</p>
+
+  <ul>
+    <li>MIPS/SINIX, <code>mips-sni-sysv4</code></li>
+  </ul>
 
 
 <h2>Documentation improvements</h2>
@@ -76,9 +103,6 @@
 <h2>Other significant improvements</h2>
 
   <ul>
-    <li>A new scheme for accurately describing processor pipelines has been
-        added for GCC 3.2 (aka the DFA scheduler).</li>
-
     <li>Almost all front-end dependencies in the compiler have been
     separated out into a set of language hooks.  This should make
     adding a new front end clearer and easier.</li>
