--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -183,6 +183,15 @@ and automated testers</a> to maintain and improve quality.</p>
 
 <dl>
 
+<dt><b>May 28, 2002</b></dt>
+
+<dd>
+Support for all the systems <a
+href="gcc-3.1/changes.html#obsolete_systems">obsoleted in GCC 3.1</a>
+has been removed from the development sources.  (These targets can
+still be restored if a maintainer appears.)
+</dd>
+
 <dt><b>May 15, 2002</b></dt>
 <dd>
 <a href="gcc-3.1/">GCC 3.1</a> has been released.
