Add entries for 3.1:   i386-unknown-openbsd   sparc-sun-solaris2.6 (non-standard boot flags) plus more test results.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -99,6 +99,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i386-unknown-openbsd</td>
+<td>&nbsp;</td>
+<td>Successful (Ada, C, C++, F77, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02705.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>i386-unknown-openbsd3.1</td>
 <td>GNU as 1.92.3, openbsd ld</td>
 <td>Unsuccessful:
@@ -407,6 +414,30 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>s390-ibm-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00984.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>s390x-ibm-linux-gnu</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00985.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>s390-ibm-linux-gnu</td>
+<td></td>
+<td>Test results:
+<a href="">3.1</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.5.1</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -420,6 +451,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg00752.html">3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
+<td>non-standard boot flags</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02737.html">3.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-05/msg01013.html">3.1</a>
 </td>
 </tr>
 
