--- a/htdocs/bugs/index.html
+++ b/htdocs/bugs/index.html
@@ -54,7 +54,7 @@
 <p>Before you report a bug, please check the 
 <a href="#known">list of well-known bugs</a> and, <strong>if possible
 in any way, try a current development snapshot</strong>.
-If you want to report a bug with versions of GCC before 3.0 we strongly
+If you want to report a bug with versions of GCC before 3.1 we strongly
 recommend upgrading to the current release first.</p>
 
 <p>Before reporting that GCC compiles your code incorrectly, please
@@ -277,23 +277,7 @@ the bug is a regression.</li>
 
 <hr />
 
-<h1><a name="known">Frequently Reported Bugs in GCC 3.0</a></h1>
-
-<h2><a name="general">General</a></h2>
-
-<p>The following bugs are very frequently reported.</p>
-
-<ul>
-
-<li>GCC 2.95.2 does not build on GNU/Linux systems using glibc 2.2,
-such as Red Hat 7.0.  This is fixed in GCC 2.95.3 and GCC 3.0.</li>
-
-<li>GCC 2.95.2 crashes when compiling <code>mbx.c</code> from the PINE
-4.30 or IMAP2000 distribution on Sparc systems running Solaris.</li>
-
-</ul>
-
-<hr />
+<h1><a name="known">Frequently Reported Bugs in GCC</a></h1>
 
 <h2><a name="fortran">Fortran</a></h2>
 
@@ -418,8 +402,7 @@ C++. This means that code which might have `worked' in a previous
 version, is now rejected. You should update your code to be C++.</p>
 
 <p>You should try to use the latest stable release of the GNU C++
-compiler. This is currently 3.0. Many commonly reported bugs in
-earlier releases are fixed in that version.</p>
+compiler.</p>
 
 <h3><a name="updating">Common problems updating from G++ 2.95 to G++
 3.0</a></h3>
