Start 3.1.1 changes section, and note the powerpc-*-netbsd* structure return bug fix.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -431,7 +431,12 @@ are being obsoleted.</p>
 <li>Many cleanups and improvements in general.</li>
 </ul>
 
-<h2>Other significant improvements</h2>
+<h2>Additional changes in GCC 3.1.1</h2>
+
+<ul>
+<li>A bug related to how structures and unions are returned has been
+    fixed for <code>powerpc-*-netbsd*</code>.</li>
+</ul>
 
 </body>
 </html>
