Add entries for 3.1:   hppa1.1-hp-hpux10.20   i586-pc-linux-gnu (k6-3) (Red Hat 6.0, glibc 2.1.3, kernel 2.4.18)   i686-pc-linux-gnu (Mandrake 8.1, glibc 2.2.4, kernel 2.4.8) Fix version in a Cygwin entry.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -66,6 +66,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>hppa1.1-hp-hpux10.20</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00089.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Successful:
@@ -135,6 +142,14 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i586-pc-linux-gnu (k6-3)</td>
+<td>Red Hat 6.0 (plus updates), glibc 2.1.3, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00097.html">3.1</a></td>
+<td></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu (i386, i586, i686)</td>
 <td>PLD/Linux Nest, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
@@ -143,7 +158,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-cygwin</td>
-<td>Cygwin 98-4.10, Windows 98SE</td>
+<td>Cygwin 1.3.10, Windows 98SE</td>
 <td>Successful (C, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01989.html">3.1</a></td>
 </tr>
@@ -223,6 +238,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Mandrake 8.0, glibc 2.2.4, kernel 2.4.3</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01453.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Mandrake 8.1, glibc 2.2.4, kernel 2.4.8</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00066.html">3.1</a></td>
 </tr>
 
 <tr>
