Add short-term project for double test conversion.

--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -227,6 +227,16 @@ size.</p>
 </p>
 </li>
 
+<li>Double test conversion
+<p>Jan Hubicka added support to the mainline (to become 3.2) to do
+branch combining of chained branches having the same destination, with
+hooks for target-specific tricks.  Such tricks are expected to be
+worthwhile for IA-64; see the thread in the
+<a href="http://gcc.gnu.org/ml/gcc-patches/2002-06/msg00026.html">
+gcc-patches archives</a>.
+</p>
+</li>
+
 </ul>
 
 <h2><a name="long_term_projects">Long-term and infrastructure projects</a></h2>
