--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -214,6 +214,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Debian GNU 2.2, glibc 2.1.3, kernel 2.2.19</td>
+<td>Successful (Ada, C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00138.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Debian Unstable, glibc 2.2.4, kernel 2.4.17</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01342.html">3.1</a></td>
