Move additional changes in point release to the very top.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -11,6 +11,17 @@
 <body>
 <h1>GCC 3.1 Changes, New Features, and Fixes</h1>
 
+
+<!-- Changes for later point releases should be added at the top. -->
+
+<h2>Additional changes (that will be) in GCC 3.1.1</h2>
+
+<ul>
+<li>A bug related to how structures and unions are returned has been
+    fixed for <code>powerpc-*-netbsd*</code>.</li>
+</ul>
+
+
 <h2>Caveats</h2>
 
 <ul>
@@ -429,13 +440,6 @@ are being obsoleted.</p>
 <li>More complete and much improved documentation about GCC's
     internal representation used by the C and C++ front ends.</li>
 <li>Many cleanups and improvements in general.</li>
-</ul>
-
-<h2>Additional changes in GCC 3.1.1</h2>
-
-<ul>
-<li>A bug related to how structures and unions are returned has been
-    fixed for <code>powerpc-*-netbsd*</code>.</li>
 </ul>
 
 </body>
