Note Java compiler speedups

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -23,6 +23,8 @@
     <code>-fprefetch-loop-arrays</code> has been fixed.  Previously the
     optimization prefetched random blocks of memory for most targets except for
     i386.</li>
+<li>The Java compiler now compiles Java programs much faster and also works
+    with parallel make.</li>
 </ul>
 
 
