Note new NetBSD configurations for the SuperH processor family

--- a/htdocs/gcc-3.2/changes.html
+++ b/htdocs/gcc-3.2/changes.html
@@ -90,6 +90,20 @@
 	been added.</li>
     <li>The SPARC, HP-PA, SH4, and x86 ports have been converted to
         use the DFA processor pipeline description.</li>
+    <li>The following NetBSD configurations for the SuperH processor family
+	have been added:
+	<ul>
+	  <li>SH3, big-endian, <code>sh-*-netbsdelf*</code></li>
+	  <li>SH3, little-endian, <code>shle-*-netbsdelf*</code></li>
+	  <li>SH5, SHmedia, big-endian, 32-bit default,
+	      <code>sh5-*-netbsd*</code></li>
+	  <li>SH5, SHmedia, little-endian, 32-bit default,
+	      <code>sh5le-*-netbsd*</code></li>
+	  <li>SH5, SHmedia, big-endian, 64-bit default,
+	      <code>sh64-*-netbsd*</code></li>
+	  <li>SH5, SHmedia, little-endian, 64-bit default,
+	      <code>sh64le-*-netbsd*</code></li>
+	</ul></li>
   </ul>
 
 
