Add 3.1 entry for sparc-sun-solaris2.6.

--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -485,6 +485,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>sparc-sun-solaris2.6</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00260.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.6</td>
 <td>non-standard boot flags</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02737.html">3.1</a>
