--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -175,7 +175,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>Cygwin 1.3.10, Windows 2000</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01248.html">3.1</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01267.html">3.1</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-05/msg01267.html">3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00326.html">3.1</a></td>
 </tr>
 
 <tr>
