--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -409,6 +409,20 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-ibm-aix4.3.3.0</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00518.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>powerpc-ibm-aix5.1.0.0</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00518.html">3.1</a></td>
+</tr>
+
+<tr>
 <td>powerpc-unknown-linux-gnu</td>
 <td>Debian GNU 3.0, glibc 2.2.5, kernel 2.4.16</td>
 <td>Successful:
