Add information from Gary Hade about dispersal analysis patch for objdump.

--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -469,12 +469,18 @@ mentioned above is available from these sources:</p>
 </li>
 
 <li>Dispersal analysis
-<p>Steve Christiansen has a dispersal analysis tool.  The output is
-similar to the comments in GCC assembler output with -O2 or greater,
-but it can be used on any object file and prints information at the
-end of each function with the number of bundles and nops.
-Currently this uses McKinley rules and so would still be under NDA,
-but if there's interest, Steve could use Itanium rules instead.</p>
+<p>Steve Christiansen wrote a dispersal analysis tool that uses objdump
+disassembly output.  It uses McKinley rules and cannot be distributed
+outside of IBM.</p>
+
+<p>Gary Hade added Itanium 1 support to Steve's dispersal analysis
+code and integrated the code into GNU Binutils source so it can be invoked
+and controlled from objdump using IA-64 specific disassembler options.
+The results of the optional dispersal analysis are added to the
+disassembly output.  Gary submitted a patch supporting Itanium 1 to the
+Binutils project via the bug-binutils mailing list on June 6, 2002.  An
+update adding Itanium 2 support can be provided after Intel makes the
+McKinley information public.</p>
 </li>
 
 <li>Statistics gathering tool
