Note two mips*-*-netbsd* fixes I checked in today.

--- a/htdocs/gcc-3.1/changes.html
+++ b/htdocs/gcc-3.1/changes.html
@@ -25,6 +25,9 @@
     i386.</li>
 <li>The Java compiler now compiles Java programs much faster and also works
     with parallel make.</li>
+<li>Nested functions have been fixed for <code>mips*-*-netbsd*</code>.</li>
+<li>Some missing floating point support routines have beed added for
+    <code>mips*-*-netbsd*</code>.</li>
 </ul>
 
 
