--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -146,7 +146,20 @@ Installing GCC: Final Installation</a>.</p>
 <td>Red Hat 6.0 (plus updates), glibc 2.1.3, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00097.html">3.1</a></td>
-<td></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful (C, C++, F77, Java):
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00618.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu (k6-2)</td>
+<td>Slackware 8.0, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00619.html">3.1</a></td>
 </tr>
 
 <tr>
