--- a/htdocs/gcc-3.1/buildstat.html
+++ b/htdocs/gcc-3.1/buildstat.html
@@ -329,6 +329,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>SuSE 7.1, glibc 2.2.7, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-06/msg00675.html">3.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 7.3, glibc 2.2.4, kernel 2.4.18</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-05/msg02468.html">3.1</a></td>
