* index.html: Mention assert checkin.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -74,6 +74,12 @@ can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>June 11, 2002</b>
+</td><td>
+Tom Tromey has implemented the JDK 1.4 <code>assert</code> facility.
+</td></tr>
+
+<tr><td valign="top">
 <b>March 10, 2002</b>
 </td><td>
 Adam Megacz has contributed a mingw32 port of libgcj.  This port is
